--- a/package.json
+++ b/package.json
@@ -36,9 +36,12 @@
     "jest-expo": "^51.0.2"
   },
   "jest": {
-    "preset": "jest-expo",
+    "preset": "react-native",
+    "setupFiles": [
+      "./node_modules/react-native-gesture-handler/jestSetup.js"
+    ],
     "transformIgnorePatterns": [
-      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+      "node_modules/(?!(jest-)?react-native|@react-native-community|@env)"
     ]
   },
   "private": true
